pequeños cambios en el test para cambiar el arraylist